neubot.h

/*
 * LibNeubot interface - Public domain.
 * WARNING: Autogenerated file - do not edit!
 */

#ifndef NEUBOT_H
# define NEUBOT_H 65537

#ifdef __cplusplus
extern "C" {
#endif

/* Hooks and slots: */

typedef void (*neubot_hook_vo)(void *);
typedef void (*neubot_hook_vos)(void *, const char *);

typedef void (*neubot_slot_vo)(void *);
typedef void (*neubot_slot_vos)(void *, const char *);

/* Classes: */

struct NeubotEchoServer;
struct NeubotHttpClient;
struct NeubotPollable;
struct NeubotPoller;

/* NeubotEchoServer API: */

struct NeubotEchoServer *NeubotEchoServer_construct(struct NeubotPoller *, 
    int, const char *, const char *);

/* NeubotHttpClient API: */

struct NeubotHttpClient *NeubotHttpClient_construct(struct NeubotPoller *, 
    neubot_slot_vo, neubot_slot_vo, neubot_slot_vo, neubot_slot_vo, 
    neubot_slot_vo, neubot_slot_vo, neubot_slot_vo, void *);

int NeubotHttpClient_connect(struct NeubotHttpClient *, const char *, 
    const char *, const char *);

int NeubotHttpClient_write(struct NeubotHttpClient *, const char *, size_t);

int NeubotHttpClient_writes(struct NeubotHttpClient *, const char *);

int NeubotHttpClient_flush(struct NeubotHttpClient *);

int NeubotHttpClient_code(struct NeubotHttpClient *);

const char *NeubotHttpClient_reason(struct NeubotHttpClient *);

const char *NeubotHttpClient_header(struct NeubotHttpClient *, const char *);

size_t NeubotHttpClient_body_length(struct NeubotHttpClient *);

const char *NeubotHttpClient_body_string(struct NeubotHttpClient *);

void NeubotHttpClient_close(struct NeubotHttpClient *);

/* NeubotPollable API: */

struct NeubotPollable *NeubotPollable_construct(struct NeubotPoller *, 
    neubot_slot_vo, neubot_slot_vo, neubot_slot_vo, void *);

int NeubotPollable_attach(struct NeubotPollable *, long long);

void NeubotPollable_detach(struct NeubotPollable *);

long long NeubotPollable_fileno(struct NeubotPollable *);

int NeubotPollable_set_readable(struct NeubotPollable *);

int NeubotPollable_unset_readable(struct NeubotPollable *);

int NeubotPollable_set_writable(struct NeubotPollable *);

int NeubotPollable_unset_writable(struct NeubotPollable *);

void NeubotPollable_set_timeout(struct NeubotPollable *, double);

void NeubotPollable_clear_timeout(struct NeubotPollable *);

void NeubotPollable_close(struct NeubotPollable *);

/* NeubotPoller API: */

struct NeubotPoller *NeubotPoller_construct(void);

int NeubotPoller_sched(struct NeubotPoller *, double, neubot_hook_vo, void *);

int NeubotPoller_defer_read(struct NeubotPoller *, long long, neubot_hook_vo, 
    neubot_hook_vo, void *, double);

int NeubotPoller_defer_write(struct NeubotPoller *, long long, neubot_hook_vo, 
    neubot_hook_vo, void *, double);

int NeubotPoller_resolve(struct NeubotPoller *, int, const char *, 
    neubot_hook_vos, void *);

void NeubotPoller_loop(struct NeubotPoller *);

void NeubotPoller_break_loop(struct NeubotPoller *);

#ifdef __cplusplus
}
#endif

#endif  /* NEUBOT_H */